add find user by user id
